# C_Project_Template

./: .gitignore  CMakeLists.txt  README.md
bash/: find_project_root.sh
src/: CMakeLists.txt  main.c
src/A/: A.c  A.h
src/B/: B.c  B.h
src/C/: C.c  C.h
test/: CMakeLists.txt
test/A/: CMakeLists.txt  test_A.cpp
test/B/: CMakeLists.txt  test_B.cpp
test/C/: CMakeLists.txt  test_C.cpp
